Changes by RealDeal

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ repositories {
 			includeGroup("software.bernie.geckolib")
 		}
 	}
+	maven {
+		name = "Modrinth"
+		url = uri("https://api.modrinth.com/maven")}
 }
 
 fabricApi {
@@ -40,6 +43,7 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}"
+	modCompileOnly "maven.modrinth:ntrdeals-items:${project.ntrdeals_items_version}"
 }
 
 processResources {
