--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ archives_base_name=wind-charged-weaponry
 # Dependencies
 fabric_version=0.116.0+1.21.1
 geckolib_version=4.7.5.1
+ntrdeals_items_version=1.2.0
